rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@events-ErrorsProcessor-events__1__errors1.json.snap
---
source: src/processors/mod.rs
description: "[\n  2,\n  \"insert\",\n  {\n    \"data\": {\n      \"environment\": \"production\",\n      \"event_id\": \"9cdc4c32dff14fbbb012b0aa9e908126\",\n      \"level\": \"error\",\n      \"logger\": \"\",\n      \"platform\": \"javascript\",\n      \"received\": 1677512412.437706,\n      \"release\": \"123abc\",\n      \"timestamp\": 1677512412.223,\n      \"type\": \"error\",\n      \"version\": \"7\"\n    },\n    \"datetime\": \"2023-02-27T15:40:12.223000Z\",\n    \"event_id\": \"9cdc4c32dff14fbbb012b0aa9e908126\",\n    \"group_id\": 124,\n    \"group_ids\": [124],\n    \"message\": \"hello world\",\n    \"organization_id\": 123,\n    \"platform\": \"javascript\",\n    \"primary_hash\": \"061cf02b26374d108694d6643a7a2f4e\",\n    \"project_id\": 6036610\n  },\n  {\n    \"group_states\": [\n      {\n        \"id\": \"124\",\n        \"is_new\": false,\n        \"is_new_group_environment\": false,\n        \"is_regression\": false\n      }\n    ],\n    \"is_new\": false,\n    \"is_new_group_environment\": false,\n    \"is_regression\": false,\n    \"queue\": \"post_process_errors\",\n    \"skip_consume\": false\n  }\n]\n"
expression: snapshot_payload
---
[
  {
    "contexts.key": [],
    "contexts.value": [],
    "culprit": "",
    "deleted": 0,
    "dist": null,
    "environment": null,
    "event_id": "9cdc4c32-dff1-4fbb-b012-b0aa9e908126",
    "exception_frames.abs_path": [],
    "exception_frames.colno": [],
    "exception_frames.filename": [],
    "exception_frames.function": [],
    "exception_frames.in_app": [],
    "exception_frames.lineno": [],
    "exception_frames.module": [],
    "exception_frames.package": [],
    "exception_frames.stack_level": [],
    "exception_stacks.mechanism_handled": [],
    "exception_stacks.mechanism_type": [],
    "exception_stacks.type": [],
    "exception_stacks.value": [],
    "flags.key": [],
    "flags.value": [],
    "group_first_seen": 0,
    "group_id": 124,
    "http_method": null,
    "http_referer": null,
    "level": null,
    "location": null,
    "message": "hello world",
    "message_timestamp": "<event timestamp>",
    "modules.name": [],
    "modules.version": [],
    "num_processing_errors": 0,
    "offset": 1,
    "partition": 0,
    "platform": "javascript",
    "primary_hash": "061cf02b-2637-4d10-8694-d6643a7a2f4e",
    "project_id": 6036610,
    "received": 1677512412,
    "release": null,
    "retention_days": 30,
    "sample_weight": null,
    "sdk_integrations": [],
    "sdk_name": "",
    "sdk_version": "",
    "tags.key": [],
    "tags.value": [],
    "timestamp": 1677512412,
    "timestamp_ms": "1677512412.223",
    "title": "",
    "transaction_name": "",
    "type": "error",
    "user": "",
    "user_email": null,
    "user_id": null,
    "user_name": null,
    "version": "7"
  }
]
