rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@events-ErrorsProcessor-events__1__null-tag-keys.json.snap
---
source: src/processors/mod.rs
description: "[\n  2,\n  \"insert\",\n  {\n    \"group_id\": 123123123,\n    \"group_ids\": [123123123],\n    \"event_id\": \"119b2902bae948b3a05368f184a0b4b8\",\n    \"organization_id\": 123123123,\n    \"project_id\": 123123123,\n    \"message\": \"redacted\",\n    \"title\": \"redacted\",\n    \"platform\": \"java\",\n    \"datetime\": \"2023-03-07T17:24:09.987000Z\",\n    \"data\": {\n      \"event_id\": \"119b2902bae948b3a05368f184a0b4b8\",\n      \"level\": \"fatal\",\n      \"version\": \"7\",\n      \"type\": \"error\",\n      \"logger\": \"\",\n      \"platform\": \"java\",\n      \"timestamp\": 1678209849.987,\n      \"received\": 1678209850.169863,\n      \"release\": \"redacted\",\n      \"environment\": \"production\",\n      \"contexts\": {},\n      \"tags\": [null, [null, \"redacted\"]],\n      \"errors\": [\n        {\n          \"type\": \"value_too_long\",\n          \"name\": \"tags.0.0\"\n        }\n      ],\n      \"key_id\": \"123123123\",\n      \"project\": 123123123,\n      \"fingerprint\": [\"{{ default }}\"],\n      \"hashes\": [\"f5174f5bbe71742b14e3c728ed189a43\"],\n      \"_ref\": 4504057827688448,\n      \"_ref_version\": 2,\n      \"nodestore_insert\": 1678209852.164581\n    },\n    \"primary_hash\": \"f5174f5bbe71742b14e3c728ed189a43\",\n    \"retention_days\": 90,\n    \"occurrence_id\": null,\n    \"occurrence_data\": {}\n  },\n  {\n    \"is_new\": false,\n    \"is_regression\": false,\n    \"is_new_group_environment\": false,\n    \"queue\": \"post_process_errors\",\n    \"skip_consume\": false,\n    \"group_states\": [\n      {\n        \"id\": 123123123,\n        \"is_new\": false,\n        \"is_regression\": false,\n        \"is_new_group_environment\": false\n      }\n    ]\n  }\n]\n"
expression: snapshot_payload
---
[
  {
    "contexts.key": [],
    "contexts.value": [],
    "culprit": "",
    "deleted": 0,
    "dist": null,
    "environment": null,
    "event_id": "119b2902-bae9-48b3-a053-68f184a0b4b8",
    "exception_frames.abs_path": [],
    "exception_frames.colno": [],
    "exception_frames.filename": [],
    "exception_frames.function": [],
    "exception_frames.in_app": [],
    "exception_frames.lineno": [],
    "exception_frames.module": [],
    "exception_frames.package": [],
    "exception_frames.stack_level": [],
    "exception_stacks.mechanism_handled": [],
    "exception_stacks.mechanism_type": [],
    "exception_stacks.type": [],
    "exception_stacks.value": [],
    "flags.key": [],
    "flags.value": [],
    "group_first_seen": 0,
    "group_id": 123123123,
    "http_method": null,
    "http_referer": null,
    "level": null,
    "location": null,
    "message": "redacted",
    "message_timestamp": "<event timestamp>",
    "modules.name": [],
    "modules.version": [],
    "num_processing_errors": 1,
    "offset": 1,
    "partition": 0,
    "platform": "java",
    "primary_hash": "f5174f5b-be71-742b-14e3-c728ed189a43",
    "project_id": 123123123,
    "received": 1678209850,
    "release": null,
    "retention_days": 90,
    "sample_weight": null,
    "sdk_integrations": [],
    "sdk_name": "",
    "sdk_version": "",
    "tags.key": [],
    "tags.value": [],
    "timestamp": 1678209849,
    "timestamp_ms": "1678209849.987",
    "title": "",
    "transaction_name": "",
    "type": "error",
    "user": "",
    "user_email": null,
    "user_id": null,
    "user_name": null,
    "version": "7"
  }
]
