rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@events-ErrorsProcessor-events__1__weird-transaction-source.json.snap
---
source: src/processors/mod.rs
description: "[\n  2,\n  \"insert\",\n  {\n    \"group_id\": 123,\n    \"group_ids\": [123],\n    \"event_id\": \"ce16ee7fe48c4a258049e0f6b122e5d6\",\n    \"organization_id\": 122,\n    \"project_id\": 122,\n    \"message\": \"hello\",\n    \"platform\": \"python\",\n    \"datetime\": \"2023-03-13T17:34:49.328086Z\",\n    \"data\": {\n      \"event_id\": \"ce16ee7fe48c4a258049e0f6b122e5d6\",\n      \"level\": \"error\",\n      \"version\": \"7\",\n      \"type\": \"error\",\n      \"transaction\": \"redacted\",\n      \"transaction_info\": {\n        \"source\": \"customer used before_send to redact this value\"\n      },\n      \"logger\": \"\",\n      \"platform\": \"python\",\n      \"timestamp\": 1678728889.328086,\n      \"received\": 1678728889.383191,\n      \"environment\": \"production\",\n      \"ingest_path\": [\n        {\n          \"version\": \"23.2.0\",\n          \"public_key\": \"deadbeef\"\n        }\n      ],\n      \"key_id\": \"122\",\n      \"project\": 122,\n      \"grouping_config\": {\n        \"enhancements\": \"eJybzDRxY3J-bm5-npWRgaGlroGxrpHxBABcYgcZ\",\n        \"id\": \"newstyle:2019-10-29\"\n      },\n      \"_metrics\": {\n        \"bytes.ingested.event\": 10249,\n        \"bytes.stored.event\": 12209\n      },\n      \"fingerprint\": [\"{{ default }}\"],\n      \"hashes\": [\"ba0d38e4ad7e080a9c2d7a8c134f0b50\"],\n      \"culprit\": \"nylas_pages.handle_webhook\",\n      \"_ref\": 232684,\n      \"_ref_version\": 2,\n      \"nodestore_insert\": 1678728891.60629\n    },\n    \"primary_hash\": \"ba0d38e4ad7e080a9c2d7a8c134f0b50\",\n    \"retention_days\": 90,\n    \"occurrence_id\": null,\n    \"occurrence_data\": {}\n  },\n  {\n    \"is_new\": false,\n    \"is_regression\": false,\n    \"is_new_group_environment\": false,\n    \"queue\": \"post_process_errors\",\n    \"skip_consume\": false,\n    \"group_states\": [\n      {\n        \"id\": 122,\n        \"is_new\": false,\n        \"is_regression\": false,\n        \"is_new_group_environment\": false\n      }\n    ]\n  }\n]\n"
expression: snapshot_payload
---
[
  {
    "contexts.key": [],
    "contexts.value": [],
    "culprit": "nylas_pages.handle_webhook",
    "deleted": 0,
    "dist": null,
    "environment": null,
    "event_id": "ce16ee7f-e48c-4a25-8049-e0f6b122e5d6",
    "exception_frames.abs_path": [],
    "exception_frames.colno": [],
    "exception_frames.filename": [],
    "exception_frames.function": [],
    "exception_frames.in_app": [],
    "exception_frames.lineno": [],
    "exception_frames.module": [],
    "exception_frames.package": [],
    "exception_frames.stack_level": [],
    "exception_stacks.mechanism_handled": [],
    "exception_stacks.mechanism_type": [],
    "exception_stacks.type": [],
    "exception_stacks.value": [],
    "flags.key": [],
    "flags.value": [],
    "group_first_seen": 0,
    "group_id": 123,
    "http_method": null,
    "http_referer": null,
    "level": null,
    "location": null,
    "message": "hello",
    "message_timestamp": "<event timestamp>",
    "modules.name": [],
    "modules.version": [],
    "num_processing_errors": 0,
    "offset": 1,
    "partition": 0,
    "platform": "python",
    "primary_hash": "ba0d38e4-ad7e-080a-9c2d-7a8c134f0b50",
    "project_id": 122,
    "received": 1678728889,
    "release": null,
    "retention_days": 90,
    "sample_weight": null,
    "sdk_integrations": [],
    "sdk_name": "",
    "sdk_version": "",
    "tags.key": [],
    "tags.value": [],
    "timestamp": 1678728889,
    "timestamp_ms": "1678728889.328",
    "title": "",
    "transaction_name": "",
    "type": "error",
    "user": "",
    "user_email": null,
    "user_id": null,
    "user_name": null,
    "version": "7"
  }
]
